--- a/pr.html
+++ b/pr.html
@@ -27,8 +27,8 @@
         <h2>Список практичних робіт</h2>
         <ul>
             <li><a href="index.html">Практичне заняття №1</a> – Створення головної сторінки</li>
-            <li><a href="prac2/pr2.html">Практичне заняття №2</a> – Практичне заняття № 2. Основи HTML</li>
-            <li><a href="prac3/pr3.html">Практичне заняття №3</a> – Створення кнопки</li>
+            <li><a href="prac2/registration.html">Практичне заняття №2</a> – Практичне заняття № 2. Основи HTML</li>
+            <li><a href="prac3/button-example.html">Практичне заняття №3</a> – Створення кнопки</li>
             <li><a href="prac4/pr4.html">Практичне заняття №4</a> – Копія Ютубу</li>
             <li><a href="prac5/pr5.html">Практичне заняття №5</a> – Розробка сторінки планера.</li>
             <li><a href="prac6/pr6.html">Практичне заняття №6</a> – Створення довільної анімації покемонів</li>
